--- a/template.env
+++ b/template.env
@@ -1,7 +1,7 @@
 # Mongo DB
 MONGODB_ATLAS_CLUSTER_URI = 
-COLLECTION_NAME=
-DB_NAME =
+MONGODB_COLLECTION_NAME=
+MONGODB_DB_NAME =
 
 # Mongo DB Atlas Hybrid Search
 VECTOR_SEARCH_INDEX_NAME =
