--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = [
 ]
 dependencies = [
     "langchain-mongodb>=0.2.0",
+    "langchain-cohere>=0.3.0",
+    "pypdfium2>=4.30.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
