better template env.

--- a/template.env
+++ b/template.env
@@ -1,8 +1,8 @@
 # Mongo DB
 MONGODB_ATLAS_CLUSTER_URI = 
-MONGODB_COLLECTION_NAME=
-MONGODB_DB_NAME =
+MONGODB_COLLECTION_NAME=demo
+MONGODB_DB_NAME =demo
 
 # Mongo DB Atlas Hybrid Search
-VECTOR_SEARCH_INDEX_NAME =
-FULL_TEXT_SEACH_INDEX_NAME=
+VECTOR_SEARCH_INDEX_NAME = vector_index
+FULL_TEXT_SEACH_INDEX_NAME= text_search
