--- a/template.env
+++ b/template.env
@@ -6,3 +6,6 @@ MONGODB_DB_NAME =demo
 # Mongo DB Atlas Hybrid Search
 VECTOR_SEARCH_INDEX_NAME = vector_index
 FULL_TEXT_SEACH_INDEX_NAME= text_search
+
+# Cohere API Key
+COHERE_API_KEY =
